source/stylesheets/setting/_fonts.scss
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
@import url('https://use.fontawesome.com/releases/v5.8.1/css/all.css');
@import url('https://fonts.googleapis.com/icon?family=Material+Icons');

// Default fonts set
$microsoft-jheng-hei: \5FAE\8EDF\6B63\9ED1\9AD4;
$us-default-font: 'Roboto';
$default-font:
  // Common Default
  $us-default-font,
  // Windows Chinese default
  $microsoft-jheng-hei,
  // macOS Chinese Default
  "PingFangTC-Light",
  // Safari for macOS and iOS (San Francisco)
  -apple-system,
  // Chrome < 56 for macOS (San Francisco)
  BlinkMacSystemFont,
  // Windows
  "Segoe UI",
  // Basic web fallback
  "Helvetica Neue", Arial, sans-serif,
  // Emoji fonts
  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;

// Material Web Icon font set
// Rules for sizing the icon.
.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

// Rules for using icons as black on a light background.
.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }

// Rules for using icons as white on a dark background.
.material-icons.md-light { color: rgba(255, 255, 255, 1); }
.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }

